# Astar_with_traj_opt

./: README.md
src/map_gen/: CMakeLists.txt  package.xml
src/map_gen/config/: global_costmap.yaml  local_costmap.yaml  my_map.yaml  st_voxel.yaml
src/map_gen/launch/: costmap_optimal_control.launch  global_costmap.launch  local_costmap.launch
src/map_gen/rviz/: map.rviz
src/path_searcher/: CMakeLists.txt  package.xml
src/path_searcher/include/path_searcher/: astar.h
src/path_searcher/src/: astar.cpp  astar_node.cpp
src/simple_optimal_control/: CMakeLists.txt  package.xml
src/simple_optimal_control/include/simple_optimal_control/: point_motion.h
src/simple_optimal_control/src/: point_motion.cpp  test_with_init.cpp
